# Springs

./: CMakeLists.txt
include/: AssignmentPaths.hpp.in  BSpline.hpp  BSplineScene.hpp  CMakeLists.txt  DeBoor.hpp  Node.hpp  Scene.hpp  TensorPatch.hpp  TensorPatchScene.hpp  angline.hpp  angnode.h  angnode.hpp  angscene.hpp  line.hpp  torsionline.hpp  torsionnode.hpp  torsionscene.hpp  triangle.hpp
shaders/: CMakeLists.txt  Node.fs.glsl  Node.vs.glsl  TensorControl.fs.glsl  TensorControl.vs.glsl  TensorPatch.fs.glsl  TensorPatch.tcs.glsl  TensorPatch.tes.glsl  TensorPatch.vs.glsl  UniformMatrices.glsl
source/: AssignmentPaths.cpp  AssignmentPaths.cpp.in  BSpline.cpp  BSplineScene.cpp  CMakeLists.txt  Node.cpp  TensorPatch.cpp  TensorPatchScene.cpp  angline.cpp  angnode.cpp  angscene.cpp  line.cpp  main.cpp  scene.cpp  torsionline.cpp  torsionnode.cpp  torsionscene.cpp  triangle.cpp
