get_filename_component(ASSIGNMENT_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)

set(ASSIGNMENT_ROOT ${CMAKE_CURRENT_LIST_DIR})
set(ASSIGNMENT_INCLUDE_ROOT "${ASSIGNMENT_ROOT}/include")
set(ASSIGNMENT_SOURCE_ROOT "${ASSIGNMENT_ROOT}/source")
set(ASSIGNMENT_SHADER_ROOT "${ASSIGNMENT_ROOT}/shaders")

add_subdirectory(${ASSIGNMENT_INCLUDE_ROOT})
add_subdirectory(${ASSIGNMENT_SOURCE_ROOT})
add_subdirectory(${ASSIGNMENT_SHADER_ROOT})

source_group("source" FILES ${ASSIGNMENT_SOURCE_LIST})
source_group("include" FILES ${ASSIGNMENT_INCLUDE_LIST})
source_group("shaders" FILES ${ASSIGNMENT_SHADER_LIST})

include_directories(${ASSIGNMENT_INCLUDE_ROOT})

add_executable(${ASSIGNMENT_NAME} ${ASSIGNMENT_SOURCE_LIST}
    ${ASSIGNMENT_INCLUDE_LIST} ${ASSIGNMENT_SHADER_LIST})
target_link_libraries(${ASSIGNMENT_NAME} ${ATLAS_LIBRARIES})
set_target_properties(${ASSIGNMENT_NAME} PROPERTIES FOLDER "assignments")
